test/libsolidity/syntaxTests/unterminatedBlocks/one_dot.sol
contract c {
    function f() pure public { 1.
// ----
// ParserError: (47-47): Expected identifier but got end of source